PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Add RUN_TESTS_IN_RANDOM_ORDER environment variable to cause tests to run in a random order
- pts-core: Add sdl2-development to PTS External Dependencies
- pts-core: Fix regression from 5.2m1 that broke some areas of the GUI / web interface
- pts_Graph: Render min/avg/max stats at top of line graphs (thanks to mufasa72)

Phoronix Test Suite 5.2 Milestone 1
8 May 2014

- pts-core: Fix for not writing null test result file titles
- pts-core: Fix & improvements to PRESET_OPTIONS environment variable
- pts-core: Rename old/legacy phoromatic module to phoromaric_legacy
- pts-core: Allow a range of test run options to be inputted (e.g. 2-5) to complement just a single test option or delimited by commas
- pts-core: Fix for NOT saving test results when in batch-run mode and configured against saving
- pts-core: Allow TEST_RESULTS_IDENTIFIER environment variable to be used when running tests unconditionally
- phodevi: Improvement for detecting optimal NVIDIA Linux GPU core frequency on modern GPUs
- phodevi: Add GPU usage reporting support to open-source AMD Radeon driver via RadeonTOP

Phoronix Test Suite 5.0.1-Plavsk
2 April 2014

- pts-core: Add "libudev1:i386" to "32bit-compatibility" external dependency for Ubuntu Linux
- pts-core: Add invalid command helper to force-install sub-command
- pts-core: Add "pcre" external dependency
- pts-core: Add pushover_net module as a way of sending iOS/Android push notifications of results using Pushover.net
- pts-core: Ensure the result file description properly updates when adding to result files with new data
- pts-core: Add edit-result-file command that allows for editing a result file's title and description
- pts-core: Workaround HTTPS OpenBenchmarking.org proxy issue
- pts-core: Improved handling when the system's php.ini is using a restricted open_basedir setting
- pts-core: Arch Linux support improvements