@@ -137,8 +137,8 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '5.2.0m1');
-pts_define('PTS_CORE_VERSION', 5110);
+pts_define('PTS_VERSION', '5.2.0m2');
+pts_define('PTS_CORE_VERSION', 5120);
 pts_define('PTS_CODENAME', 'KHANINO');
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
 pts_define('PTS_IS_WEB_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'WEB_CLIENT'));
